Closed Bug 168688 Opened 23 years ago Closed 23 years ago

cmd-l spawns new window instead of putting focus in addressbar

Categories

(Camino Graveyard :: Accessibility, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: neilio, Assigned: sfraser_bugs)

References

Details

Attachments

(1 file, 2 obsolete files)

I've noticed that after running Navigator for a bit, cmd-l spawns a new window instead of putting focus into the address bar. If I quit and restart or create a new window (cmd-n), the problem disappears for a while but returns. Sorry this isn't more detailed but I haven't been able to reliably reproduce this. I'll update if I can.. Build 2002091405
Okay, I can reproduce this now: i) click on a link that spawns a new window (via the 'target' attribute). ii) with the new window in front, hit cmd-l to put focus into address bar. iii) the new window doesn't get focus - the original one does. iv) even if you close the first window, hitting cmd-l in the new window continues to spawn new windows instead of putting focus in the address bar of the original window as expected. I can get this to reproduce every time.
Confirmed using Chimera/2002090913 on 10.1.5. Reassigning to Accessibility. Probably a dup of bug 168369.
Assignee: saari → bryner
Status: UNCONFIRMED → NEW
Component: General → Accessibility
Ever confirmed: true
QA Contact: winnie → sairuh
I have noticed this for a while, but just thought to look for a bug before I reported it myself. I am still noticing this under 10.2 with the 10/23/02 Chimera nightly build.
i can repro this using the recipe in comment 1. bryner, do you think this is the same as bug 168369?
->sfraser
Assignee: bryner → sfraser
Attached patch Patch fixing 168688 (obsolete) — Splinter Review
The bug happens when a new window is generated from a old window using the following sample tag <a href="www.abc.com" target="new"> The Chrome of the new window is something other than the default chrome. As a result, the function "getFrontmostBrowserWindow" will continue to search for the next window until it found a window that is with default chrome. The new patch will use the window with key focus [windowController keyWindow] instead, and checks if that window is of type BrowserWindow, and if the window has toolbar, statusbar and is resizable. If the above criteria is true, then the frontmost window will be returned, otherwise, it returns NULL so that CMD-L will open a new window.
Comment on attachment 105021 [details] [diff] [review] Patch fixing 168688 This patch has a bug, I'll just obsolete it and attach another one.
Attachment #105021 - Attachment is obsolete: true
Attached patch Patch fixing 168688 (obsolete) — Splinter Review
The previous patch has a problem that makes Chimera not remembering its latest window position. This patch will just behaves like Chimera has worked before (searching through the array of window to find the appropiate one), with the addition of checking if the browser has a toolbar, a statusbar and is resizable, then the window can become the front window.
Keywords: patch, review
The spirit of the patch looks good. Please attach a unified diff with lots of context (cvs diff -u8).
Status: NEW → ASSIGNED
*** Bug 168369 has been marked as a duplicate of this bug. ***
Blocks: 147975
I don't understand what is a 'unified diff with lots of context', could you tell me more on how to do it?
'man diff' will tell you. Assuming you're building from cvs, this will also give you a unified diff with 8 lines of context: cvs diff -u8
Unified diff attached here.
Attachment #105022 - Attachment is obsolete: true
*** Bug 178198 has been marked as a duplicate of this bug. ***
i landed this this morning. tried a few of the duplicate bugs and cmd-l focuses the urlbar in the correct (spawned) window.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 176252 has been marked as a duplicate of this bug. ***
*** Bug 171041 has been marked as a duplicate of this bug. ***
vrfy'd fixed using 2002.11.06.04 on 10.2.1. tested with both icon and text-only toolbars (to test sheet aspect), and also test other commands (cmd-L, cmd-/, cmd-B, cmd-F, accessing bookmarks from menubar).
Status: RESOLVED → VERIFIED
Awesome. Thanks for all the work on this.
No longer blocks: 147975
*** Bug 162028 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: