expand what we think is a "full browser" window when looking for the frontmost. fixes bug where windows opened by a new target would never get focus from cmd-l. (bug 168688).